# project-obbyware

./: CMakeLists.txt  README.md  dump.txt  test.rbxlx
assets/animations/: ClimbLoopAnimation_180436334.rbxmx  Dance2_1Loop_182436842.rbxmx  Dance2_3Loop_182491277.rbxmx  Dance3_1Loop_182436935.rbxmx  Dance3_2Loop_182491368.rbxmx  DanceLoop_182435998.rbxmx  FallLoopAnimation_180436148.rbxmx  Idle1LoopAnimation_180435571.rbxmx  Idle2LoopAnimation_180435792.rbxmx  SittingAnimation_178130996.rbxmx  ToolLoopAnimation_182393478.rbxmx  WalkLoopAnimation_180426354.rbxmx
assets/shaders/: lighting.fs  lighting.vs
include/: OWAnimation.hpp  OWCamera.hpp  OWDebugFlags.hpp  OWPlaceLoader.hpp  OWPlayerController.hpp  OWRig.hpp  OWShaders.hpp  OWWorld.hpp  ObbywareMain.hpp
include/Lighting/: OWLighting.hpp  OWShaders.hpp
include/OWInstance/: OWContainer.hpp  OWInstance.hpp  OWPart.hpp
include/OWPhysics/: BigBoyConstants.hpp  OWCharacter.hpp  OWPhysics.hpp
libowsolver/: CMakeLists.txt
libowsolver/include/libowsolver/: Body.hpp  CollisionWorld.hpp  Constraint.hpp  ConstraintJacobian.hpp  ConstraintTypes.hpp  ConstraintVariables.hpp  ContactManifold.hpp  CoordinateFrame.hpp  Motor6D.hpp  RigidBody.hpp  Simd.hpp  Solver.hpp  SolverBody.hpp  SolverConfig.hpp  SolverKernel.hpp
libowsolver/src/: Body.cpp  CollisionWorld.cpp  Constraint.cpp  ConstraintJacobian.cpp  ConstraintTypes.cpp  ConstraintVariables.cpp  ContactManifold.cpp  Solver.cpp  SolverBody.cpp  SolverConfig.cpp  SolverKernel.cpp
src/: OWAnimation.cpp  OWCamera.cpp  OWPlaceLoader.cpp  OWPlayerController.cpp  OWRig.cpp  OWWorld.cpp  Obbyware.cpp  ObbywareMain.cpp
src/Lighting/: OWShaders.cpp
(+4 files in other folders)
